--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "BALCONY"]
+	path = BALCONY
+	url = https://github.com/stolarczyk/balcony
+	shallow = true
+	registered = true
